# shortcuts-keyboard

./: .dockerignore  .gitignore  Dockerfile  FOLDER_STRUCTURE.md  MIGRATION_V2.md  README.md  add_shortcut.py  add_shortcut_v2.py  example_add_shortcut.sh  main.py  pyproject.toml
docs/: FOLDER_STRUCTURE.md  MIGRATION_V2.md  SHORTCUTS_README.md  SHORTCUTS_SYSTEM.md  SVG_ICONS_GUIDE.md
shortcuts/: README.md
shortcuts/chrome/: config.json
shortcuts/cursor/: config.json
shortcuts/notion/: config.json
shortcuts/safari/: config.json
shortcuts/slack/: config.json
shortcuts/spotify/: config.json
static/: index.html
